--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crm-client",
+  "name": "crm-nodejs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,16 +12,23 @@
   "author": "Prasanth",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.8.0",
-    "mongoose": "^6.4.5",
-    "nodemailer": "^6.7.7"
+    "mongodb": "^4.12.1",
+    "mongoose": "^6.7.5",
+    "mongoose-sequence": "^5.3.1",
+    "nodemailer": "^6.8.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.20"
   }
 }
